--- a/build.gradle
+++ b/build.gradle
@@ -185,6 +185,7 @@ dependencies {
     compile group: 'io.prometheus', name: 'simpleclient', version: '0.6.0'
     compile group: 'io.prometheus', name: 'simpleclient_servlet', version: '0.6.0'
     compile group: 'io.prometheus', name: 'simpleclient_jetty', version: '0.6.0'
+    compile group: 'io.prometheus', name: 'simpleclient_hotspot', version: '0.6.0'
 
 }
 
