--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,7 +75,7 @@ workflows:
     - docker-build-push:
         context: docker-hub-credentials
         requires:
-        - test
+        - build
         filters:
           branches:
             only:
