--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ jobs:
     - attach_workspace:
         at: /tmp/repo
     
-    - run: gradle test
+    - run: gradle test --debug --stacktrace
           
   docker-build-push:
     docker:
@@ -75,7 +75,7 @@ workflows:
     - docker-build-push:
         context: docker-hub-credentials
         requires:
-        - test
+        - build
         filters:
           branches:
             only:
