--- a/build.gradle
+++ b/build.gradle
@@ -182,6 +182,10 @@ dependencies {
     compile "io.vavr:vavr:0.9.2"
     compile group: 'org.pf4j', name: 'pf4j', version: '2.5.0'
     compile group: 'org.zeromq', name: 'jeromq', version: '0.5.0'
+    compile group: 'io.prometheus', name: 'simpleclient', version: '0.6.0'
+    compile group: 'io.prometheus', name: 'simpleclient_servlet', version: '0.6.0'
+    compile group: 'io.prometheus', name: 'simpleclient_jetty', version: '0.6.0'
+    compile group: 'io.prometheus', name: 'simpleclient_hotspot', version: '0.6.0'
 
 }
 
